# rust-prelude-plus

./: Cargo.toml  PERFORMANCE_ANALYSIS.md  PERFORMANCE_SUMMARY.md  README.md
benches/: keypath_benchmarks.rs
docs/: TESTABILITY_BENEFITS.md
examples/: async_examples.rs  collections.rs  comprehensive_examples.rs  examples.rs  iter_comparison.rs  optimized_performance_comparison.rs  parallel_examples.rs  performance_comparison.rs  simple.rs  simple_working_example.rs  testability_benefits.rs
src/: async_ops.rs  collections.rs  composable.rs  error.rs  higher_order.rs  lib.rs  parallel.rs  traits.rs
test_keypaths/: Cargo.toml
test_keypaths/src/: main.rs
test_new_keypaths/: Cargo.toml
test_new_keypaths/src/: main.rs
tests/: simple_tests.rs  testability_tests.rs
