[package]
name = "rust-prelude-plus"
version = "0.1.0"
edition = "2021"
description = "Higher-order functions built on top of keypaths for type-safe functional programming"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/rust-prelude-plus"
keywords = ["functional-programming", "keypaths", "rust", "composable", "prelude"]
categories = ["functional-programming", "data-structures"]

[dependencies]
key-paths-core = "1.0.2"
key-paths-derive = "0.6.0"
serde = { version = "1.0", optional = true, features = ["derive"] }
tokio = { version = "1.0", optional = true, features = ["full"] }
rayon = { version = "1.7", optional = true }
thiserror = "1.0"
futures = { version = "0.3", optional = true }

[features]
default = []
async = ["dep:tokio", "dep:futures"]
parallel = ["dep:rayon"]
serde = ["dep:serde"]

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"
